[fix]: used align-items to fix compressed image

--- a/React_Facts_App/static_page_react/src/App.css
+++ b/React_Facts_App/static_page_react/src/App.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     margin: 0px 2em;
+    align-items: center;
 }
 
 .header h1{
